# lichess-tv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  setup.sh
lib/: debug.h  json.h
src/: chunk.c  chunk.h  feed.c  feed.h  fen.c  fen.h  gfx.c  gfx.h  main.c
